syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

package pb_authentication;

option go_package = "./gen/go/pb_authentication";


service AuthenticationService {
    rpc GetPublicKey(GetPublicKeyRequest) returns (GetPublicKeyResponse) {
        option (google.api.http) = {
            get: "/public-key"
        };
    }
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) = {
            get: "/verify/{verification_token}"
        };
    }
    rpc ResendEmailVerification(ResendEmailVerificationRequest) returns (ResendEmailVerificationResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message GetPublicKeyResponse {
    string public_key = 1;
}

message GetPublicKeyRequest {}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    google.protobuf.Timestamp date_of_birth = 5;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message VerifyEmailRequest {
    string verification_token = 1;
}

message VerifyEmailResponse {
    bool success = 1;
    string message = 2;
}

message ResendEmailVerificationRequest {
    string auth_token = 1;
}

message ResendEmailVerificationResponse {
    bool success = 1;
    string message = 2;
}

message AuthenticateRequest {
    string email = 1;
    string password = 2;
}

message AuthenticateResponse {
    string auth_token = 1;
    google.protobuf.Timestamp auth_token_expiry = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp refresh_token_expiry = 4;
    string user_email = 5;
}



